maze.lessons.maze.island.IslandMaze.scala.error
Escaper:22: error: not found: value set
    	set.direction(Direction.NOTH)
        ^Escaper:22: error: value NOTH is not a member of object plm.universe.Direction
    	set.direction(Direction.NOTH)
                                ^